@startuml
class Exercise {
    + Id : int
    + Name : string
    + Type : ExerciseType
    + MuscleGroups : List<MuscleGroup>
}

class ExerciseSet{
    + Repetitions: int
    + Weight: double
    + Id : int
    + WorkoutExercise : WorkoutExercise?
    + WorkoutExerciseId : int
}

class WorkoutExercise{
    + Id : int
    + ExerciseSets : List<ExerciseSet>
    + Exercise : Exercise?
    + ExerciseId : int
    + WorkoutSessionId : int
    + WorkoutSession : WorkoutSession?
}

class WorkoutSession{
    +WorkoutExercises : List<WorkoutExercise>
}

class CardioSession{
    +Distance : double
    +ElevationGain : double
    +Type : CardioType
}

enum ExerciseType {
    Strength
    Cardio
}

enum CardioType{
    Run 
    Walk
    Swim 
    Bike
}

enum MuscleGroup {
    Chest
    Back
    Shoulders
    Biceps
    Triceps
    Legs
    Glutes
    Abs
    FullBody
}


interface ISession {
    Id : int
    Name: string
    Date : DateTime
    Duration : TimeSpan
}

WorkoutSession ..|>ISession
CardioSession ..|>ISession
Exercise o-- ExerciseType : contains
Exercise o-- MuscleGroup : contains
CardioSession o-- CardioType : contains
WorkoutExercise o-- Exercise : contains
WorkoutExercise *--ExerciseSet
WorkoutSession *--WorkoutExercise
@enduml